# sensors

./: .env  Cargo.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: deploy.yml
.sqlx/: query-4ccb71cf86f7088ea7903ded79412473eaace896380a2f3217df48ffa71583b3.json  query-92f9962adf8e9244fca20c890cd53cbbc0959b6904168ed31e76c5f0f40ae32f.json  query-cf69acaf9744ca50e9303b21f37864839a6b60dfc660a88e59f5a1fce8576dd6.json
migrations/: 20260226150815_init_schema.sql  20260308101434_add_provider.sql
src/: configuration.rs  main.rs  scraper.rs
